# rs-slowquery-digest

./: Cargo.toml  LICENSE  README.md
src/: aggregator.rs  fingerprint.rs  main.rs  parser.rs  report.rs
wix/: Cargo.toml  License.rtf  main.wxs
wix/src/: main.rs
